tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__PumpingWater-AAAAAAAAAAAAAAAAAAAJjg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2446,
  "prerequisites": [
    871
  ],
  "properties": {
    "auto_claim": false,
    "desc": "RC Water Tanks not cutting it through those dry spells? Or maybe you chose a dry biome to set up in? This pump will produce more water for the low cost of something burnable (like all that lignite).",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lPumping Water",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    871
  ],
  "rewards": [],
  "tasks": []
}
