tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__RepairingYourHaz-AAAAAAAAAAAAAAAAAAAHYA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1888,
  "prerequisites": [
    534
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Be careful when wearing your hazmat suit all the time. The durability is not very high. Even just falling a few blocks will damage the boots quickly.\n\nYou can repair your suit long before you can craft a new one in late LV Age, using some rubber sheets and a glue bucket.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lRepairing Your Hazmat Suit",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    534
  ],
  "rewards": [],
  "tasks": []
}
