tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__Resistor-AAAAAAAAAAAAAAAAAAADQw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 835,
  "prerequisites": [
    67
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Every basic circuit needs two resistors to work.\n\nThere are better versions you can make later.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 1,
    "name": "§3§lResistor",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    67
  ],
  "rewards": [],
  "tasks": []
}
