tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__RubberSheets-AAAAAAAAAAAAAAAAAAACGA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 536,
  "prerequisites": [
    69
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Let's make a mold for the rubber sheets. They are mainly used for conveyors and cables.\n\nAt this stage, making cables by hand with rubber sheets is faster and cheaper in power than the Alloy Smelter recipe for the cables.\n\nWith the sheets, you should be able to craft Piston Boots - a massive upgrade to your mobility. Check out the questline Getting Around to find them.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 1,
    "name": "§3§lRubber Sheets",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    69
  ],
  "rewards": [],
  "tasks": []
}
