tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__SlimeIslandJourn-AAAAAAAAAAAAAAAAAAADaw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 875,
  "prerequisites": [
    69
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Rubber trees are not the only source for raw rubber. Go and find a slime island high in the sky. Slime balls and slime leaves give raw rubber too.\nMake some slime tree farms beside your rubber farm.\n\n§3Liquid slime is not allowed to be placed down, as it acts as a spawner, and can cause lag.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lSlime Island Journey",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    69
  ],
  "rewards": [],
  "tasks": []
}
